packages/console/src/pages/OssOnboarding/index.module.scss
@use '@/scss/underscore' as _;

.page {
  height: 100%;
  display: flex;
  flex-direction: column;
  background: var(--color-base);
  overflow: hidden;
}

.topbar {
  height: 64px;
  display: flex;
  align-items: center;
  padding: 0 _.unit(4);
  flex-shrink: 0;
}

.logo {
  width: 90px;
  height: 28px;
}

.contentContainer {
  flex: 1;
  overflow-y: auto;
  padding: _.unit(6) _.unit(4) calc(80px + _.unit(6));
}

.content {
  margin: 0 auto;
  max-width: 858px;
  padding: _.unit(12);
  border-radius: 16px;
  background: var(--color-layer-1);
  display: flex;
  flex-direction: column;
}

.heroIcon {
  width: 48px;
  height: 48px;
}

.title {
  margin-top: _.unit(6);
  font: var(--font-title-1);
}

.description {
  margin-top: _.unit(3);
  color: var(--color-text-secondary);
  font: var(--font-body-2);
}

.form {
  margin-top: _.unit(6);
  display: flex;
  flex-direction: column;
  gap: _.unit(6);
}

.emailSection {
  display: flex;
  flex-direction: column;
  gap: _.unit(3);
}

.checkbox {
  margin-top: 0;
}

.radioGroup {
  width: 100%;
}

.projectGroup {
  width: 100%;
}

.projectOptionIcon {
  width: 20px;
  height: 20px;
  color: inherit;
  flex-shrink: 0;
}

.projectRadio {
  min-height: 60px;

  > div {
    justify-content: flex-start;
    align-items: center;
    padding: _.unit(5);
  }
}

.error {
  margin-top: _.unit(2);
  color: var(--color-danger);
  font: var(--font-body-3);
}

.actionBar {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}

